--- a/bookbytes_app/pubspec.yaml
+++ b/bookbytes_app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^1.0.4
   image_cropper: ^4.0.1
   permission_handler: ^11.0.1
+  loading_animation_widget: ^1.2.0+4
 
 
 dev_dependencies:
@@ -67,9 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
