--- a/bookbytes_app/pubspec.yaml
+++ b/bookbytes_app/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   permission_handler: ^11.0.1
   loading_animation_widget: ^1.2.0+4
   liquid_pull_to_refresh: ^3.0.1
+  intl: ^0.19.0
+  webview_flutter: ^4.4.4
+  fluttertoast: ^8.2.4
   
 
 
